* CSS. Fixed tooltip visibility in App Stylizer.

--- a/less/components/Stylizer.less
+++ b/less/components/Stylizer.less
@@ -38,7 +38,7 @@
     &.app__stylizer-tooltip {
         > .inner {
             > .scroll {
-                overflow: hidden;
+                overflow: visible;
             }
         }
 
